--- a/ps00 copy.ipynb
+++ b/ps00 copy.ipynb
@@ -1,22 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false
+   },
+   "outputs": [],
    "source": [
-    "This is an interactive jupyter notebook document.\n",
-    "\n",
-    "Page down through it, following the instructions…\n",
-    "\n",
-    "With what looks to be a permanent and long-run partial moving-online of the university, the already important topic of “data science” seems likely to become even more foundational.  Hence this first problem set tries to provide you with an introduction—to “data science”, and to the framework we will be using for problem sets that we hope will make things much easier for you and for us…\n",
-    "\n",
-    "When you are finished, satisfied, or stuck, print your notebook to pdf, & email the pdf to us with subject line:\n",
-    "\n",
-    "econ-115-f-2020-jupyter-notebook-0-<your name>-<your SID>\n",
-    "\n",
-    "Please include whatever comments on this assignment you want us to know...\n",
-    "    \n",
-    "----"
+    "# Initialize OK\n",
+    "from client.api.notebook import Notebook\n",
+    "ok = Notebook('ps00.ok')"
    ]
   },
   {
@@ -266,28 +260,7 @@
    "metadata": {},
    "source": [
     "### 1.5. Programming & testing\n",
-    "Our notebooks include built-in *tests* to check whether your work is correct. Sometimes, there are multiple tests for a single question, and passing all of them is required to receive credit for the question. Please don't change the contents of the test cells.\n",
-    "\n",
-    "Run the next code cell to initialize the tests:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run this code cell to initialize the OK tests capabilities...\n",
-    "\n",
-    "from client.api.notebook import Notebook\n",
-    "ok = Notebook('ps00.ok')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " \n",
+    "Our notebooks include built-in *tests* to check whether your work is correct. Sometimes, there are multiple tests for a single question, and passing all of them is required to receive credit for the question. Please don't change the contents of the test cells. \n",
     "\n",
     "Go ahead and attempt Question 1.5.1. Running the cell directly after it will test whether you have assigned `seconds_in_a_decade` correctly in Question 4.1. If you haven't, this test will tell you the correct answer. Resist the urge to just copy it, and instead try to adjust your expression. (Sometimes the tests will give hints about what went wrong...)"
    ]
